A lot of improvements

--- a/Source/Home.html
+++ b/Source/Home.html
@@ -4,24 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widt../h=device-width, initial-scale=1.0">
-    <link rel="icon" href="../config/interface/.icon/Drogaria Retiro.ico">
-    <link rel='stylesheet' href='../config/interface/index.css'>
-    <script src="../config/scripts/index.js"></script>
+    <link rel="icon" href="../media/icons/drogaria-retiro.ico">
+    <link rel='stylesheet' href='../interface/home.css'>
+    <script src="../scripts/home.js"></script>
     <title>Acesso Rápido</title>
 </head>
 <body id="body">
     <div class="ticket">
         <a href="https://sd.assisteconline.com.br/retiro/front/ticket.form.php">
-            <img src="../config/interface/.icon/Drogaria Retiro.ico" alt="Abrir novo chamado">
+            <img src="../media/icons/drogaria-retiro.ico" id="main-icon" alt="Abrir novo chamado">
             <div class="tip">Abrir Novo Chamado</div>
         </a>
     </div>
     <h1 id="header01">Acesso Rápido</h1>
     <h2 id="header02">
-        <div id="darkFlag">
-            <label for="messageFlag">Dark Mode</label>
-            <input type="checkbox" id="messageFlag" onclick="return DarkModeController()">
-        </div>
+        <img src="../media/icons/settings.png" id="contats">
     </h2>
     <div class="megaContainer">
         <a href=https://sd.assisteconline.com.br/retiro/front/ticket.php>
@@ -44,7 +41,7 @@
         </a>
         <a href="https://pt.dll-files.com">
             <div class="container">
-                <img src="../media/images/image14.png">
+                <img src="../media/images/image03.png">
                 <div class="title">DLL Files</div>
                 <div class="tooltip">
                     Utilizado para baixar diversos arquivos ".dll".
@@ -53,7 +50,7 @@
         </a>
         <a href=https://www.nfe.fazenda.gov.br/portal/principal.aspx>
             <div class="container">
-                <img src="../media/images/image03.png">
+                <img src="../media/images/image04.png">
                 <div class="title">Nota Fiscal Eletrônica</div>
                 <div class="tooltip">
                     Utilizado para consultar e baixar arquivos ".xml".
@@ -62,7 +59,7 @@
         </a>
         <a href=https://www.webdanfe.com.br/danfe/index.html>
             <div class="container">
-                <img src="../media/images/image13.png">
+                <img src="../media/images/image05.png">
                 <div class="title">Web Danfe</div>
                 <div class="tooltip">
                     Utilizado para consultar e gerar DANFe (Caso você tenha o arquivo ".xml").
@@ -71,7 +68,7 @@
         </a>
         <a href=https://www.fsist.com.br>
             <div class="container">
-                <img src="../media/images/image12.png">
+                <img src="../media/images/image06.png">
                 <div class="title">FSist</div>
                 <div class="tooltip">
                     Utilizado para consultar e gerar DANFe (Caso você tenha o arquivo ".xml" e tenha a extensão para o Chrome instalado).
@@ -80,7 +77,7 @@
         </a>
         <a href=https://farmaciapopular-portal.saude.gov.br/farmaciapopular-portal/login.jsf>
             <div class="container">
-                <img src="../media/images/image04.png">
+                <img src="../media/images/image07.png">
                 <div class="title">Farmácia Popular</div>
                 <div class="tooltip">
                     Utilizado para registra o DNA de uma máquina para habilita-la a realizar vendas no convênio "Farmácia Popular".
@@ -89,7 +86,7 @@
         </a>
         <a href=https://www.portaldopbm.com.br>
             <div class="container">
-                <img src="../media/images/image06.png">
+                <img src="../media/images/image08.png">
                 <div class="title">Portal PBM</div>
                 <div class="tooltip">
                     Utilizado para consultar se o produto é ou não um produto de PBM e de qual plataforma ele pertence.
@@ -98,7 +95,7 @@
         </a>
         <a href=https://www.portaldadrogaria.com.br/11v1>
             <div class="container">
-                <img src="../media/images/image05.png">
+                <img src="../media/images/image09.png">
                 <div class="title">Portal da Drogaria</div>
                 <div class="tooltip">
                     Utilizado para gerar a autorização para a realização de uma venda pertencente aos convênios do "Portal da Drogaria".
@@ -107,7 +104,7 @@
         </a>
         <a href=https://sitefexpress1.softwareexpress.com.br/sitefweb/pages/inicial.zeus>
             <div class="container">
-                <img src="../media/images/image08.png">
+                <img src="../media/images/image10.png">
                 <div class="title">SiTef Express</div>
                 <div class="tooltip">
                     Utilizado para consultar as transações TEF realizadas no ERPM_PDV, também é possível confirmar ou cancelar uma transação caso ela esteja pendente, porém, apenas o responsável pelo setor "Central de Operações" pode realizar essas duas ações.
@@ -116,7 +113,7 @@
         </a>
         <a href=https://www.cellcard.com.br/index.html>
             <div class="container">
-                <img src="../media/images/image17.png">
+                <img src="../media/images/image11.png">
                 <div class="title">Cell Card</div>
                 <div class="tooltip">
                     Utilizado para consultar se uma recarga foi ou não aprovada no ERPM_PDV.
@@ -125,7 +122,7 @@
         </a>
         <a href=http://www4.fazenda.rj.gov.br/consultaDFe/paginas/resultadoNfce.faces?cid=2>
             <div class="container">
-                <img src="../media/images/image09.png">
+                <img src="../media/images/image12.png">
                 <div class="title">Documentos Fiscais</div>
                 <div class="tooltip">
                     Utilizado para consultar e baixar ducumentos fiscais eletônicos (Cupom fiscal), caso você tenha a chave do mesmo.
@@ -134,7 +131,7 @@
         </a>
         <a href=https://portal.cosmospro.com.br>
             <div class="container">
-                <img src="../media/images/image07.png">
+                <img src="../media/images/image13.png">
                 <div class="title">Cosmos Pro</div>
                 <div class="tooltip">
                     Utilizado para editar cadastros de clientes realizados no PREVENDA.
@@ -143,7 +140,7 @@
         </a>
         <a href=https://portal.cfm.org.br/busca-medicos>
             <div class="container">
-                <img src="../media/images/image11.png">
+                <img src="../media/images/image14.png">
                 <div class="title">Consulta CRM</div>
                 <div class="tooltip">
                     Utilizado para consultar se o status do CRM de um médico.
@@ -168,11 +165,47 @@
                 </div>
             </div>
         </a>
+        <a href=http://www4.fazenda.rj.gov.br/sincad-web/index.jsf>
+            <div class="container">
+                <img src="../media/images/image17.png">
+                <div class="title">Sefaz-RJ</div>
+                <div class="tooltip">
+                    Utilizado para consultar se o CNPJ de uma empresa está ativo. Só serve para empresas do estado do Rio de Janeiro.
+                </div>
+            </div>
+        </a>
+        <a href=https://servicos.receita.fazenda.gov.br/servicos/cnpjreva/cnpjreva_solicitacao.asp>
+            <div class="container">
+                <img src="../media/images/image18.png">
+                <div class="title">Situação Cadastral</div>
+                <div class="tooltip">
+                    Também é utilizado para consultar se o CNPJ de uma empresa está ativo.
+                </div>
+            </div>
+        </a>
+        <a href=https://www.thunderbird.net/pt-BR>
+            <div class="container">
+                <img src="../media/images/image19.png">
+                <div class="title">Thunderbird</div>
+                <div class="tooltip">
+                    Site oficial para baixar o Thunderbird.
+                </div>
+            </div>
+        </a>
+        <a href=https://pt-br.libreoffice.org>
+            <div class="container">
+                <img src="../media/images/image20.png">
+                <div class="title">LibreOffice</div>
+                <div class="tooltip">
+                    Site oficial para baixar o LibreOffice.
+                </div>
+            </div>
+        </a>
     </div>
 </body>
 <footer>
         <p id="footer">
-            Quick Access 0.19.0 Copyright © 2021 By Kellvyn Sampaio<br>
+            Quick Access v1.20.0 Copyright © 2021-2022 By Kellvyn Sampaio<br>
             <a id="link01" href="https://www.instagram.com/thesampaiobr">Instagram</a> | 
             <a id="link02" href="https://www.linkedin.com/in/kellvyn-sampaio-a394471a7/">Linkedin</a> | 
             <a id="link03" href="https://github.com/TheSampaio">GitHub</a>
