--- a/Source/Settings.html
+++ b/Source/Settings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acesso Rápido | Início</title>
+    <title>Acesso Rápido | Configurações</title>
     <link rel="icon" href="../Media/Icons/drogaria-retiro.ico">
     <link rel="stylesheet" href="../Interface/Default.css">
 </head>
@@ -13,14 +13,14 @@
         <a id="homeIcon" href="https://sd.assisteconline.com.br/retiro/front/ticket.form.php">
             <img src="../Media/Icons/drogaria-retiro.ico" alt="">
         </a>
-        Acesso Rápido
+        Configurações
     </h1>
     <h2>
-        <div id="active">Início</div>
+        <a id="button" href="Home.html">Início</a>
         <a id="button" href="Bookmarks.html">Favoritos</a>
         <a id="button" href="Downloads.html">Downloads</a>
         <a id="button" href="Tutorials.html">Tutoriais</a>
-        <a id="button" href="Settings.html">Configurações</a>
+        <div id="active">Configurações</div>
     </h2>
     <div id="container">
 
