A lot of improvements

--- a/Source/Downloads.html
+++ b/Source/Downloads.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acesso Rápido | Downloads</title>
-    <link rel="icon" href="../Media/Icons/drogaria-retiro.ico">
+    <link rel="icon" href="../Media/Icons/drogaria-retiro.png">
     <link rel="stylesheet" href="../Interface/Default.css">
+    <link rel="stylesheet" href="../Interface/Downloads.css">
+    <script src="../Scripts/Default.js"></script>
 </head>
-<body>
+<body onload="LoadFooterText()">
     <h1>
-        <a id="homeIcon" href="https://sd.assisteconline.com.br/retiro/front/ticket.form.php">
-            <img src="../Media/Icons/drogaria-retiro.ico" alt="">
+        <a id="homeIcon" href="http://192.168.10.10:8090/glpi/plugins/formcreator/front/formdisplay.php?id=10">
+            <img src="../Media/Icons/drogaria-retiro.png" alt="">
         </a>
         Downloads
     </h1>
     <h2>
         <a id="button" href="Home.html">Início</a>
-        <a id="button" href="Bookmarks.html">Favoritos</a>
+        <a id="button" href="Sites.html">Sites</a>
         <div id="active">Downloads</div>
-        <a id="button" href="Tutorials.html">Tutoriais</a>
-        <a id="button" href="Settings.html">Configurações</a>
     </h2>
     <div id="container">
 
@@ -40,7 +40,7 @@
             <div id="title">SQL Server Express 2014</div>
         </a>
         <!--NEW BOX BELLOW-->
-        <a id="box" href="https://download.documentfoundation.org/libreoffice/stable/7.3.2/win/x86_64/LibreOffice_7.3.2_Win_x64.msi">
+        <a id="box" href="https://download.documentfoundation.org/libreoffice/stable/7.3.3/win/x86_64/LibreOffice_7.3.3_Win_x64.msi">
             <img id="imgSite" src="../media/images/download-image-04.png">
             <div id="title">LibreOffice</div>
         </a>
@@ -68,11 +68,8 @@
     </div>
 </body>
 <footer>
-    <p id="footer">
-        Quick Access 2.1.5 Copyright © 2021-2022 By Kellvyn Sampaio<br>
-        <a id="creditLink" href="https://www.instagram.com/thesampaiobr">Instagram</a> | 
-        <a id="creditLink" href="https://www.linkedin.com/in/kellvyn-sampaio-a394471a7/">Linkedin</a> | 
-        <a id="creditLink" href="https://github.com/TheSampaio">GitHub</a>
-    </p>
+    <div id="footer">
+        <a id="creditText" href="https://github.com/TheSampaio">Quick Access --- Copyright © --- By Kellvyn Sampaio</a>
+    </div>
 </footer>
 </html>
