Fix credits link

--- a/Source/Sites.html
+++ b/Source/Sites.html
@@ -152,7 +152,7 @@
 </body>
 <footer>
     <div id="footer">
-        <a id="creditText" href="https://github.com/TheSampaio">Quick Access --- Copyright © --- By Kellvyn Sampaio</a>
+        <a id="creditText" href="https://github.com/TheSampaio/QuickAccess">Quick Access --- Copyright © --- By Kellvyn Sampaio</a>
     </div>
 </footer>
 </html>
